Fix invisible class - refs BT#11642

--- a/app/Resources/public/css/base.css
+++ b/app/Resources/public/css/base.css
@@ -96,9 +96,6 @@ a.thumbnail:hover{
 .cursor-pointer {
     cursor: pointer;
 }
-.invisible {
-  visibility: visible;
-}
 .logo{
   margin-bottom: 20px;
   padding: 5px;
